# TinyBit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  TinyBit.sln  TinyBit.vcxproj  TinyBit.vcxproj.filters  draw_functions.c  innoSetup.iss  lua_functions.c  lua_functions.h  main.c  main.cpp  main.h  script.lua
Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: flappy.lua  script.lua
enc_temp_folder/95170dd253569a591f3fa5a7ec6215e/: tinybit.h
games/: flappy.lua  qix.lua  rocket.lua
include/: audio.h  audio_functions.h  draw_functions.h  font.h  graphics.h  input.h  input_functions.h  lua_functions.h  main.h  memory.h
src/: audio.c  audio_functions.c  cartridge_io.c  cartridge_io.h  draw_functions.c  font.c  games.c  games.h  getopt.c  graphics.c  input.c  input_functions.c  lua_functions.c  main.c  memory.c  platform.c  platform.h
